--- a/pagina_1/index.html
+++ b/pagina_1/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/atv_pratica_2/pagina_1/style.css">
+    <link rel="stylesheet" href="/pagina_1/style.css">
     <title>Página 1</title>
 </head>
 <body>
@@ -39,4 +39,5 @@
     </footer>
 
 </body>
+
 </html>
